Final testing done.

--- a/cs241/project2/makefile
+++ b/cs241/project2/makefile
@@ -5,4 +5,4 @@ test:
 	./p2 d "GOODMORNING" cipher rdata;
 	diff -s data rdata;
 clean:
-	rm -rf ./p2 ./functions
+	rm -rf ./p2 ./functions ./cipher ./rdata
