--- a/cs241/hw/2/makefile
+++ b/cs241/hw/2/makefile
@@ -1,3 +1,5 @@
+3:
+	gcc -Wall -g -o ./3 ./3.c; ./3
 5:
 	gcc -Wall -g -o ./5 ./5.c; ./5
 6:
@@ -6,6 +8,9 @@
 	gcc -Wall -g -o ./7 ./7.c; ./7
 8:
 	gcc -Wall -g -o ./8 ./8.c; ./8
-
+9:
+	gcc -Wall -g -o ./9 ./9.c; ./9
+10:
+	gcc -Wall -g -o ./10 ./10.c; ./10
 clean:
-	rm -rf ./5 ./6 ./7 ./8
+	rm -rf ./3 ./5 ./6 ./7 ./8 ./9 ./10
