--- a/cs241/hw/2/makefile
+++ b/cs241/hw/2/makefile
@@ -1,3 +1,7 @@
+1:
+	gcc -Wall -g -o ./1 ./1.c; ./1
+2:
+	gcc -Wall -g -o ./2 ./2.c; ./2
 3:
 	gcc -Wall -g -o ./3 ./3.c; ./3
 5:
@@ -13,4 +17,4 @@
 10:
 	gcc -Wall -g -o ./10 ./10.c; ./10
 clean:
-	rm -rf ./3 ./5 ./6 ./7 ./8 ./9 ./10
+	rm -rf ./1 ./2 ./3 ./5 ./6 ./7 ./8 ./9 ./10
